-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.2
-
Component/s: None
-
Labels:
-
Guilty Revision:71,779
https://reactos.org/testman/compare.php?ids=48038,48039
metafile.c:153: Test failed: emr_ExtTextOutW->rclBounds.right = -1
|
metafile.c:155: Test failed: emr_ExtTextOutW->rclBounds.bottom = -1
|
metafile.c:153: Test failed: emr_ExtTextOutW->rclBounds.right = -1
|
metafile.c:155: Test failed: emr_ExtTextOutW->rclBounds.bottom = -1
|
(win32ss/user/ntuser/msgqueue.c:843) err: Remove Window Messages E1593228 From Sent Queue
|
metafile.c:1841: Test failed: emf_BitBlt: contents of record 77 don't match
|
metafile.c:2448: Test failed: expected 0, got 154
|
metafile.c:1897: Test failed: emf_Bezier: expected rclBounds.left = 0, got 10
|
metafile.c:1899: Test failed: emf_Bezier: expected rclBounds.top = 0, got 10
|
Unhandled exception
|
ExceptionCode: 80000003
|
CS:EIP 1b:7c58e2cc
|
DS 23 ES 23 FS 3b GS 0
|
EAX: 00000004 EBX: 00000015 ECX: 00018121
|
EDX: 00000000 EBP: 0022fa30 ESI: 00000015 ESP: 0022fa30
|
EDI: 00000015 EFLAGS: 00000202
|
Address:
|
7c570000+1e2cc C:\ReactOS\system32\gdi32.dll
|
Frames:
|
7c570000+2078e C:\ReactOS\system32\gdi32.dll
|
7c570000+20c08 C:\ReactOS\system32\gdi32.dll
|
7c570000+1e3a2 C:\ReactOS\system32\gdi32.dll
|
7c570000+4362 C:\ReactOS\system32\gdi32.dll
|
400000+6bcc9 C:\ReactOS\bin\gdi32_winetest.exe
|
400000+767ba C:\ReactOS\bin\gdi32_winetest.exe
|
400000+773b7 C:\ReactOS\bin\gdi32_winetest.exe
|
400000+77419 C:\ReactOS\bin\gdi32_winetest.exe
|
7c750000+fe47 C:\ReactOS\system32\kernel32.dll
|
- relates to
-
CORE-11368 Syncing ReactOS with Wine Staging 1.9.11
-
- Resolved
-