reactos/win32ss/gdi/gdi32/wine/enhmfdrv/enhmetafiledrv.h
@@ -42,8 +42,13 @@ typedef struct
     HDC        ref_dc;             /* Reference device */
     HDC        screen_dc;          /* Screen DC if no reference device specified */
     INT        restoring;          /* RestoreDC counter */
+    BOOL       path;
 } EMFDRV_PDEVICE;
 
+static inline EMFDRV_PDEVICE *get_emf_physdev( PHYSDEV dev )
+{
+    return CONTAINING_RECORD( dev, EMFDRV_PDEVICE, dev );
+}
 
 extern BOOL EMFDRV_WriteRecord( PHYSDEV dev, EMR *emr ) DECLSPEC_HIDDEN;
 extern void EMFDRV_UpdateBBox( PHYSDEV dev, RECTL *rect ) DECLSPEC_HIDDEN;
